--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "mongoose": "^7.6.11"
+    "mongoose": "^7.6.11",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7"
   }
 }
